--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "type": "commonjs",
   "scripts": {
     "start": "node bin/cli.js",
+    "extract:mobile": "node bin/cli.js --target mobile --output ./credentials.mobile.json",
+    "extract:tv": "node bin/cli.js --target tv --output ./credentials.tv.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
