--- a/.github/workflows/extract.yml
+++ b/.github/workflows/extract.yml
@@ -6,8 +6,13 @@ on:
     - cron: '0 4 * * 1' # Runs every Monday at 04:00 UTC
 
 jobs:
-  decompile:
+  extract:
     runs-on: ubuntu-latest
+
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
 
     steps:
       - name: Checkout repository
