--- a/.github/workflows/extract.yml
+++ b/.github/workflows/extract.yml
@@ -38,10 +38,11 @@ jobs:
           # Unzip the archive
           unzip -q jadx.zip -d jadx-dist
 
+          echo $PATH && ls $(pwd)/jadx-dist/
+
           # Add the JADX bin directory to the GitHub Actions path
           # This makes the 'jadx' command available in subsequent steps
           echo "$(pwd)/jadx-dist/jadx-${JADX_VERSION}/bin" >> $GITHUB_PATH
-          export PATH="$(pwd)/jadx-dist/jadx-${JADX_VERSION}/bin:$PATH"
 
           # Clean up the downloaded zip file
           rm jadx.zip
