--- a/.github/workflows/extract.yml
+++ b/.github/workflows/extract.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Install JADX
         run: |
           JADX_VERSION=$(curl -s "https://api.github.com/repos/skylot/jadx/releases/latest" | grep -Po '"tag_name": "v\K[0-9.]+')
+          echo "Installing JADX version ${JADX_VERSION}..."
           curl -Lo jadx.zip "https://github.com/skylot/jadx/releases/download/v${JADX_VERSION}/jadx-${JADX_VERSION}.zip"
           unzip -q jadx.zip -d jadx-dist
           echo "$(pwd)/jadx-dist/bin" >> $GITHUB_PATH
