--- a/.github/workflows/extract.yml
+++ b/.github/workflows/extract.yml
@@ -13,18 +13,13 @@ jobs:
       contents: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22
-
-      - name: Setup JDK 17
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
 
       - name: Install JADX
@@ -35,9 +30,6 @@ jobs:
           unzip -q jadx.zip -d jadx-dist
           echo "$(pwd)/jadx-dist/bin" >> $GITHUB_PATH
           rm jadx.zip
-
-      - name: Verify JADX installation
-        run: jadx --version
 
       - name: Install dependencies
         run: npm install
